blocks/columns/columns.css
/* stylelint-disable no-descending-specificity */
main .section > div.columns-wrapper {
  margin-top: 20px;
}

.columns > div {
  display: flex;
  flex-direction: column;
}

.columns div > *:first-child {
  margin-top: 0;
}

.columns[class*="layout-"] > div {
  gap: 30px;
}

.columns img {
  width: 100%;
}

.columns p.button-container {
  display: inline-block;
  margin-right: 10px;
}

.columns ul + p.button-container {
  margin-left: 40px;
}

.columns .video-wrapper {
  margin-top: 0;
}

.columns.center {
  text-align: center;
}

.columns.line > div {
  flex-wrap: wrap;
  padding: 40px 0;
}

.columns.line > div::after {
  flex-wrap: wrap;
  content: "";
  width: 94%;
  padding-top: 50px;
  border-bottom: 2px solid #ccc;
  margin-left: 14px;
  margin-bottom: 16px;
}

.columns.line h4 {
  font-size: 26px;
}

.columns p.video-title {
  font-size: var(--body-font-size-m);
}

.columns.innovation img {
  width: 165px;
  height: 167px;
}

.columns.light-and-dark-grey > div > div {
  margin-left: unset;
  padding: 40px;
}

.columns.bullet-points p {
  display: flex;
}

.columns .icon.icon-chevron-right-outline {
  width: 20px;
  height: 20px;
}

.columns.bullet-points p.button-container,
.columns.bullet-points ul + p.button-container {
  margin-bottom: 5px;
  margin-left: 10px;
  margin-right: 0;
}

.columns.bullet-points ul {
  margin-bottom: 5px;
  margin-left: 20px;
  padding-left: 0;
}

.columns.contact {
  padding: 80px 0;
}

.columns.columns-sitemap h3 {
  font-size: 36px;
  margin-bottom: 30px;
  font-family: var(--ff-proxima-light);
}

.columns.columns-sitemap h4 {
  font-family: var(--ff-proxima-regular);
  font-weight: bold;
  font-size: var(--list-font-size-l);
  text-transform: uppercase;
}

.columns.columns-sitemap h5 {
  font-weight: bold;
  font-size: var(--body-font-size-m);
}

.columns.columns-sitemap ul,
.columns.columns-sitemap h4 {
  margin: 0;
  padding: 0;
}

.columns.columns-sitemap ul {
  margin-bottom: 30px;
  color: var(--text-color);
  margin-top: 4px;
}

.columns.columns-sitemap a,
.columns.columns-sitemap a .fa-external-link {
  color: inherit;
}

.columns.columns-sitemap a:hover {
  color: var(--link-hover-color);
}

.columns.columns-sitemap h4 + h4 {
  margin-top: 20px;
}

.columns.columns-sitemap h4 ~ h3 {
  margin-top: 40px;
}

.columns.columns-sitemap h4 ~ h5 {
  padding-left: 20px;
  margin-top: 30px;
  margin-bottom: 4px;
}

.columns.columns-sitemap h5 + h4 {
  margin-top: 30px;
}

.columns.columns-sitemap h4 ~ ul {
  padding-left: 40px;
}

.columns.columns-sitemap ul ul {
  padding-left: 20px;
  list-style: disc;
  margin-bottom: 0;
}

.columns.contact > div > div {
  background-color: var(--background-color);
  width: 100%;
}

.columns.contact > div > div > ul,
.columns.contact > div > div > ol {
  list-style: none;
  padding-left: 0;
}

.columns.contact > div p,
.columns.contact > div ul li {
  font-size: var(--body-font-size-m);
}

.columns.contact > div > div > p,
.columns.contact > div > div > ul,
.columns.contact > div > div > ol {
  padding: 0 24px;
}

.columns.contact > div h3 {
  background-color: var(--dark-gray-background-color);
  color: var(--text-white);
  font-size: var(--heading-font-size-m);
  font-weight: bold;
  margin: 0;
  padding: 16px 8px;
  text-align: center;
}

.columns.contact > div > div > ul > li {
  margin-bottom: 16px;
  padding-top: 8px;
  position: relative;
}

.columns.contact > div ul li a {
  color: inherit;
}

.columns.bullet-points p.button-container a {
  font-weight: bold;
  display: flex;
  flex-wrap: wrap;
}

.columns.contact > div ul li a:hover {
  color: var(--text-green);
}

.columns.contact > div > div > ul > li > i {
  color: var(--text-green);
  float: left;
  font-size: var(--heading-font-size-l);
  padding-right: 20px;
}

.columns.contact > div ul li::after,
.columns.contact > div > div ul ul::before {
  clear: both;
  content: "";
  display: table;
}

.columns.contact > div > div > ul > li:not(:last-child)::after {
  background-color: var(--border-color-gray);
  bottom: -10px;
  content: "";
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  width: calc(100% - 56px);
}

.columns.contact > div ul li span.icon {
  float: left;
  padding-right: 20px;
}

.columns.contact > div ul li span.icon,
.columns.contact > div > div > ul > li > i {
  width: 40px;
}

.columns.contact > div ul li span.icon svg,
.columns.contact > div ul li img {
  display: inline-block;
  height: 32px;
  object-fit: contain;
  vertical-align: top;
}

.columns.layout-20-80.partners-list-columns ul li picture,
.columns.layout-20-80.partners-list-columns ul li img {
  display: block;
  margin: 0 auto;
}

.columns.contact > div ul li span.icon-spectra img,
.columns.contact > div ul li span.icon-spectra svg {
  height: 40px;
}

.columns.contact > div ul li span.icon:not(.icon-spectra) svg {
  fill: var(--text-green);
}

.columns.contact > div ul li span.icon-spectra ~ a {
  font-size: var(--body-font-size-l);
  font-weight: bold;
}

.columns.contact > div > div ul ul {
  list-style: disc;
  margin-bottom: 0;
  margin-top: 8px;
  padding-left: 70px;
}

.columns.contact > div ul li .fa-clock-o {
  height: 75px;
}

.columns.collaboration.columns-3-cols {
  justify-content: center;
}

.columns.columns-3-cols:not(.innovation, .collaboration) {
  margin-left: -15px;
  margin-right: -15px;
}

.columns.columns-3-cols > div:not(:only-child) {
  padding: 0 15px 20px;
}

.columns.layout-20-80.extended-width:not(.green-separator) {
  margin-bottom: 80px;
}

.columns.columns-3-cols > div:not(:only-child) > div {
  margin-left: 0;
}

.columns.video-teaser h2 {
  font-size: 40px;
}

.columns.video-teaser > div > div:not(:has(div.video-wrapper)) {
  background-color: #6a747b;
  color: var(--text-white);
  margin-left: 0;
  padding: 32px;
}

.columns.light-and-dark-grey > div > div > p {
  font-size: 20px;
}
/* ... */

